testsuite/tests/properties/invalid_raise/not_exception.lkt
import common

class Example: FooNode implements TokenNode {
    fun p(): Int = raise[Int] FooNode()
}
